--- a/css/index.css
+++ b/css/index.css
@@ -341,7 +341,6 @@ ul {
     color: #ffffff;
     letter-spacing: -1.1px;
     line-height: 60px;
-    
 }
 
 .title--green {
@@ -383,7 +382,8 @@ ul {
 
 /* about__btn====*/
     .about__btn{
-    width: 380px;
+    max-width: 380px;
+    width: 100%;
     height: 60px;
     border-radius: 30px;
     font-size: 2.1rem;
@@ -414,7 +414,7 @@ ul {
 }
 
 .products__item {
-    flex-grow: 1;
+    flex: 1 0 25%;
     display: flex;
     flex-direction: column;
     align-items: center; 
@@ -449,7 +449,8 @@ ul {
 
 /* products__btn====*/
 .products__btn {
-    width: 204px;
+    max-width: 204px;
+    width: 100%;
     height: 60px;
     border-radius: 30px;
     background-color: transparent;
@@ -509,7 +510,8 @@ ul {
 
 /* story__btn====*/
 .story__btn {
-    width: 301px;
+    max-width: 301px;
+    width: 100%;
     height: 60px;
     padding: 0 40px 0 30px;
     border-radius: 30px;
@@ -576,6 +578,11 @@ ul {
     text-align: center;
 }
 
+.testimonials__img {
+    max-width: 220px;
+    width: 100%;
+}
+
 .text--white{
     color: #ffffff;
     }
@@ -589,7 +596,8 @@ ul {
 
 /* testimonials__btn====*/
 .testimonials-navigation {
-    width: 160px;
+    max-width: 160px;
+    width: 100%;
     display: flex;
     justify-content: space-between;
 }
@@ -612,6 +620,8 @@ ul {
 }
 
 .blog__img {
+    max-width: 555px;
+    width: 100%;
     margin: 49px 63px 0 0;
     position: relative;
     z-index: 1;
@@ -637,7 +647,7 @@ ul {
 
 .article__subtitle {
     color: #f2612d;
-    font-size: 30px;
+    font-size: 3rem;
     line-height: 1.33;
     letter-spacing: -0.6px;
     font-family: "MuliExtraBold";
@@ -646,7 +656,8 @@ ul {
 
 
 .article__text {
-    width: 472px;
+    max-width: 472px;
+    width: 100%;
     line-height: 1.94;
     margin: 45px 0 0 63px;
 }
@@ -684,6 +695,11 @@ ul {
     padding-bottom: 10px;
 }
 
+.instagram__img {
+    max-width: 384px;
+    width: 100%;
+}
+
 
 /* Footer=================================*/
 .footer{
@@ -702,6 +718,10 @@ ul {
 /* footer__logo====*/
 .footer__logo {
     padding-top: 55px;
+}
+
+.footer__centre-blog {
+    display: flex;
 }
 
 /* footer__information====*/
@@ -753,7 +773,8 @@ ul {
 
 /* footer__subscribe ====*/
 .footer__input{
-    width: 495px;
+    max-width: 495px;
+    width: 100%;
     height: 60px;
     border-radius: 30px;
     background-color: #ffffff;
@@ -856,6 +877,7 @@ ul {
         position: fixed;
         right: 40px;
         top: 40px;
+        z-index: 3;
     }
 
 /* запрос после нажатия бургер-меню*/
@@ -894,7 +916,7 @@ ul {
 
 /* Smoothies=============================*/
 .smoothies {
-    padding: 80px 30px;
+    padding: 70px 30px;
 }
 .title {
     font-size: 4rem;
@@ -920,10 +942,10 @@ ul {
     justify-content: center;
     align-items: center;
     transform: translateY(0);
-    padding: 60px 0;
+    padding: 70px 30px;
 }
 .about__img {
-    margin: 50px auto 0;
+    margin: 50px 0 0;
     width: 80%;
 }
 .about__box {
@@ -943,26 +965,18 @@ ul {
     overflow-x: auto;
 }
 .products__item {
-    width: 80vw;
+    flex: 1 0 70%;
 }
 .products__img {
     padding: 60px 0 34px 0;
-    width: 50%;
-}
-.products__btn {
-    width: 204px;
-    height: 60px;
-    border-radius: 30px;
-    background-color: transparent;
-    margin: 40px 0 60px 0;
+    width: 30%;
 }
 
 /* Story=================================*/
 .story {
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    padding: 60px 0 60px 0;
+    padding: 70px 30px;
 }
 .story__about::after {
     display: none;
@@ -983,7 +997,7 @@ ul {
 
 /* Testimonials=================================*/
 .testimonials {
-    padding: 60px 0 60px 0;
+    padding: 70px 30px;
 }
 .testimonials::after {
     display: none;
@@ -1002,85 +1016,155 @@ ul {
 }
 
 /* Blog=================================*/
-
 .blog {
-    padding: 60px 0 60px 0;
+    padding: 70px 30px;
+    flex-direction: column;
+    align-items: center;
+}
+.blog__img {
+    margin: 45px 0 45px 0;
+}
+.blog__box-right::before {
+    display: none;
+}
+.blog__box-right{ 
+    margin-top: 0;
+}
+
+/* Instagram=================================*/
+.instagram__picture-item {
+    overflow-x: auto;
+}
+.instagram__img {
+    width: 70%;
+}
+
+/* Footer=================================*/
+.footer__content {
+    padding: 70px 30px;
     flex-direction: column;
 }
-
-
-.blog__img {
-    margin: 49px 63px 0 0;
-    position: relative;
-    z-index: 1;
+.footer__logo {
+    padding-top: 0;
+    text-align: center;
 }
-
-.blog__box-right{ 
-    margin-top: 230px;
-    position: relative;
+.footer__centre-blog {
+    justify-content: space-between;
+    margin: 40px 70px;
 }
-
-.blog__box-right::before {
-    content:"";
-    display: inline-block;
-    width: 687px;
-    height: 12px;
-    background-color: #f7ae3b;
-    border-radius: 5px;
-    margin-bottom: 50px;
-    position: absolute;
-    top: -63px;
-    left: -95px;
+.footer__information {
+    margin: 0;
 }
-
-.article__subtitle {
-    color: #f2612d;
-    font-size: 30px;
-    line-height: 1.33;
-    letter-spacing: -0.6px;
-    font-family: "MuliExtraBold";
-    margin-bottom: 19px;
+.footer__title {
+    margin-bottom: 15px;
+}
+.footer__payment {
+    margin-right: 0;
 }
 
 
-.article__text {
-    width: 472px;
-    line-height: 1.94;
-    margin: 45px 0 0 63px;
-}
 
 
-.article__link {
-    font-family: "MuliExstraBoldItalic";
-    text-decoration: none;
-    margin-right: 20px;
+.footer__subscribe-text::before {
+    display: none;
 }
-/* Instagram=================================*/
-/* .instagram {
+}
+
+/* 
+
+/* footer__subscribe ====*/
+/*.footer__input{
+    width: 495px;
+    height: 60px;
+    border-radius: 30px;
     background-color: #ffffff;
+    border-style: none;
+    background-image: url("./../../assets/images/footer/footer-Icon-email.png");
+    background-repeat: no-repeat;
+    background-position: 23px, center;
+    padding-left: 60px;
 }
 
-.instagram_link {
+.footer__subscribe-social {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    margin: 27px 50px 0 0;
+}
+
+.footer__social-link {
+    margin-left: 25px;
+}
+
+.footer__social-link:first-child {
+    margin-left: 43px;
+}
+
+.footer__subscribe-text {
+    position: relative;
+}
+
+.footer__subscribe-text::before {
+    content: "";
+    display: inline-block;
+    position: absolute;
+    width: 48px;
+    height: 43px;
+    background-image: url("./../../assets/images/footer/footer-arrow-img.png");
+    top: -25px;
+    left: -60px;
+}
+
+
+/* footer__bottom====*/
+/*.footer__bottom {
+    background-color: #6c2c1c;
     display: flex;
     justify-content: center;
-    align-items: center;
-    font-family: "MuliExtraBold";
-    color: #0aa566;
-    text-decoration: none;
-    line-height: 1.67;
-    font-size: 24px;
-    margin-bottom: 45px;
+    padding: 25px 0 21px 0;
+    position: relative;
 }
 
-.instagram_logo {
-    margin-right: 12px;
+.footer__bottom-copy {
+    color: #af8a82;
+    line-height: 2.69;
+    letter-spacing: 0.26px;
+    font-size: 13px;
+    text-align: center;
 }
 
-.instagram__picture-item {
-    display: flex;
-    flex-grow: 1;
-    padding-bottom: 10px;
-} */
-
-
+.footer__wrapper {
+    position: absolute;
+    top: 28px;
+    right: 150px;
 }
+
+.footer__wrapper-text {
+    color: #ffffff;
+    font-size: 16px;
+    font-family: "MuliBold";
+    position: relative;
+}
+
+.footer__btn-top {
+    background-color: #f2662f;
+    width: 50px;
+    height: 50px;
+    border-radius: 5px;
+    border: none;
+    position: absolute;
+    top: -56px;
+    left: 60px;
+}
+
+.footer__btn-top::after {
+    content: "";
+    display: inline-block;
+    width: 13px;
+    height: 25px;
+    background-image: url("./../../assets/images/footer/footer-btn-arrow-top.png");
+} */ */ */
+
+
+
+
