--- a/less/main.less
+++ b/less/main.less
@@ -1,4 +1,5 @@
 // out: ../css/main.min.css, compress: true, sourceMap: true
+@import "./_vars.less";
 
 
 
@@ -35,8 +36,7 @@
 }
 
 
-/* common styles=====*/
-
+// --------------------Common styles--------------------//
 html,
 body{
     font-family: "MuliRegular";
@@ -46,6 +46,7 @@ ul {
     list-style: none;
     margin: 0;
 }
+// --------------------Common styles--------------------//
 
 // --------------------BLOCKS--------------------//
 @import "./blocks/_button.less";
@@ -53,6 +54,8 @@ ul {
 @import "./blocks/_menu.less";
 @import "./blocks/_personal.less";
 @import "./blocks/_social.less";
+// --------------------BLOCKS--------------------//
+
 
 
 /* Smoothies blog=================================*/
@@ -203,7 +206,6 @@ ul {
     max-width: 380px;
     width: 100%;
     height: 60px;
-    border-radius: 30px;
     font-size: 2.1rem;
 }
 
@@ -272,7 +274,6 @@ ul {
     max-width: 204px;
     width: 100%;
     height: 60px;
-    border-radius: 30px;
     background-color: transparent;
     margin: 66px 0 79px 0;
 }
@@ -334,7 +335,6 @@ ul {
     width: 100%;
     height: 60px;
     padding: 0 40px 0 30px;
-    border-radius: 30px;
     border: none;
     font-size: 2.1rem;
     line-height: 1.05;
@@ -350,6 +350,7 @@ ul {
     padding: 120px 0 80px 0;
     position: relative;
 }
+
 .testimonials::after{
     content:"";
     display: inline-block;
@@ -359,18 +360,6 @@ ul {
     position: absolute;
     top: -75px;
     right: 95px;
-}
-
-.testimonials::before{
-    content:"Sarah A";
-    font-family: "MuliExtraBold";
-    font-size: 20rem;
-    line-height: 0.2;
-    letter-spacing: -4px;
-    color: rgba(82, 25, 5, 0.6);
-    position: absolute;
-    top: 302px;
-    right: 730px;
 }
 
 .title--love {
@@ -396,6 +385,22 @@ ul {
     width: 100%;
     color: #ffffff;
     text-align: center;
+    position: relative;
+}
+
+.testimonials__text::before{
+    content:"Sarah A";
+    font-family: "MuliExtraBold";
+    font-size: calc(80px + (200 - 80) * ((100vw - 360px) / (1920 - 360)));
+    line-height: 0.2;
+    letter-spacing: -4px;
+    color: rgba(82, 25, 5, 0.6);
+    position: absolute;
+    left: 50%;
+    top: -20%;
+    transform: translate(-50%, -50%);
+    width: max-content;
+    z-index: -1;
 }
 
 .testimonials__img {
@@ -592,6 +597,7 @@ ul {
 }
 
 /* footer__subscribe ====*/
+
 .footer__input{
     max-width: 495px;
     width: 100%;
@@ -687,9 +693,56 @@ ul {
 
 
 
-/* запрос для бургер меню*/
+
+
 @media (max-width: 768px) {
-    
+
+    /* Header=============================*/
+    /* запрос для бургер меню*/
+    .header__navigation {
+        display: none;
+    }
+    .header__burger-btn {
+        display: block;
+        position: fixed;
+        right: 40px;
+        top: 40px;
+        z-index: 3;
+    }
+
+/* запрос после нажатия бургер-меню*/
+/* @media (max-width: 768px) {
+    .header__back-btn {
+        display: block;
+        position: fixed;
+        left: 40px;
+        top: 40px;
+        z-index: 2;
+    }
+    .header__navigation {
+        background-color:#178670;
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        z-index: 1;
+        display: flex;
+        flex-direction:column-reverse;
+        justify-content: flex-end;
+        padding-top: 150px;
+    }
+    .menu__list {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 400px;
+        margin-top: 150px;
+    }
+    .menu__item {
+        margin-right: 0;
+    }
+}  */
 
 /* Smoothies=============================*/
 .smoothies {
@@ -809,7 +862,7 @@ ul {
 .testimonials::before {
     top: 56%;
     right: 13%;
-    font-size: 15rem;
+    // font-size: 15rem;
 }
 .testimonials__feedback {
     flex-direction: column-reverse;
@@ -866,8 +919,9 @@ ul {
     margin-right: 0;
 }
 .footer__subscribe {
-    margin: 0 70px;
-}
+    // margin: 0 70px;
+    margin-right: calc(15px + (70 - 15) * ((100vw - 360px) / (768 - 360)));
+    margin-left: calc(15px + (70 - 15) * ((100vw - 360px) / (768 - 360)));
 }
 
 @media (max-width: 480px) {
@@ -954,11 +1008,9 @@ margin-bottom: 20px;
 .footer__subscribe-social {
     margin: 27px 0 0 0;
 }
-.footer__subscribe {
-    margin: 0 15px;
+// .footer__subscribe {
+//     margin: 0 15px;
+// }
+
 }
 }
-
-
-
-
