--- a/less/_vars.less
+++ b/less/_vars.less
@@ -1,10 +1,39 @@
 // main: ./main.less
 
+// ------------------Переменные------------------ //
 @primary: #f7ae3b;
 @secondary:  #0aa566;
-@borderRadius: 30px;
-@textColor: white;
-@textMainColor: black;
+
+// font
+@baseFontSizeUnit: 10px;
+@baseLineHeightUnit: 1;
+// title
+@primaryColorTitle: #f7ae3b;
+@secondaryColorTitle: #0aa566;
+// text
+@primaryColorText: black;
+@secondaryColorText:  white;
+// btn
 @buttonHeight: 6rem;
-@fontSize: 18px;
-@paddingLeftButton: 30px;
+@buttonPaddingLeft: 30px;
+@buttonBorderRadius: 30px;
+@buttonPrimaryBackgroundColor: #0aa566;
+@buttonSecondaryBackgroundColor: transparent;
+@buttonPrimaryBorder: #f7ae3b;
+@buttonSecondaryBorder: white;
+
+// ----------------------------------- //
+@fontSizeTitle: @baseFontSizeUnit * 5;
+@fontSizeText: @baseFontSizeUnit * 1.8;
+@lineHeightTitle: @baseLineHeightUnit * 0.8;
+@lineHeightText: @baseLineHeightUnit * 1.9;
+
+
+
+// ------------------Fonts------------------ //
+@muliRegular: "MuliRegular";
+@muliBold: "MuliBold";
+@muliExtraBold: "MuliExtraBold";
+@muliBlack: "MuliBlack";
+@muliItalic: "MuliItalic";
+@muliExstraBoldItalic: "MuliExstraBoldItalic";
