--- a/less/blocks/_header.less
+++ b/less/blocks/_header.less
@@ -68,6 +68,6 @@
         width: 280px;
         height: 70px;
         border: none;
-        font-size: 2.4rem;
+        font-size: @baseFontSizeUnit * 2.4;
     }
 }
