--- a/less/blocks/_menu.less
+++ b/less/blocks/_menu.less
@@ -13,7 +13,7 @@
     }
     &__link {
         font-size: 1.6rem;
-        font-family: "MuliBold";
+        font-family: @muliBold;
         text-decoration: none;
         text-transform: uppercase;
         color: #ffffff;
