--- a/less/_media.less
+++ b/less/_media.less
@@ -201,9 +201,9 @@
     flex: 1 0 70%;
 
 }
-.instagram__img {
-    width: 70%;
-}
+// .instagram__img {
+//     width: 70%;
+// }
 
 /* Footer=================================*/
 .footer__content {
