--- a/less/blocks/_features.less
+++ b/less/blocks/_features.less
@@ -12,10 +12,10 @@
         margin-bottom: 30px;
     }
     &__item-title {
-        font-family: "MuliExtraBold";
-        font-size: 2.5rem;
+        font-family: @muliExtraBold;
+        font-size: @baseFontSizeUnit * 2.5;
         color: #f2612d;
-        line-height: 1.6;
+        line-height: @baseLineHeightUnit * 1.6;
         letter-spacing: -0.5px;
 }
 }
