--- a/less/blocks/_personal.less
+++ b/less/blocks/_personal.less
@@ -28,9 +28,9 @@
         display: inline-block;
         width: 18px;
         height: 18px;
-        font-size: 1rem;
+        font-size: @baseFontSizeUnit;
         text-align: center;
-        line-height: 2;
+        line-height: @baseLineHeightUnit * 2;
         border-radius: 50%;
         color: #000000; 
         text-decoration: none;
