--- a/less/blocks/_footer.less
+++ b/less/blocks/_footer.less
@@ -19,18 +19,18 @@
         margin: 0 173px 0 296px;
     }
     &__title {
-        font-family: "MuliExtraBold";
-        line-height: 1.54;
+        font-family: @muliExtraBold;
+        line-height: @baseLineHeightUnit * 1.54;
         letter-spacing: -0.52px;
-        font-size: 26px;
+        font-size: @baseFontSizeUnit * 2.6;
         color: #ffffff;
         margin-bottom: 30px;
     }
     &__link {
         text-decoration: none;
-        font-family: "MuliBold";
-        font-size: 18px;
-        line-height: 1.94;
+        font-family: @muliBold;
+        font-size: @baseFontSizeUnit * 1.8;
+        line-height: @baseLineHeightUnit * 1.94;
         letter-spacing: -0.36px;
         color: #6d450c;
     }
@@ -65,6 +65,8 @@
         background-repeat: no-repeat;
         background-position: 23px, center;
         padding-left: 60px;
+        font-size: @baseFontSizeUnit * 1.7;
+        line-height: @baseLineHeightUnit * 2;
     }
     &__subscribe-social {
         display: flex;
@@ -81,6 +83,8 @@
     
     &__subscribe-text {
         position: relative;
+        font-size: @baseFontSizeUnit * 1.8;
+        line-height: @baseLineHeightUnit * 2.22;
         &::before {
             content: "";
             display: inline-block;
@@ -88,7 +92,7 @@
             width: 48px;
             height: 43px;
             background-image: url("./../../assets/images/footer/footer-arrow-img.png");
-            top: -25px;
+            top: -13px;
             left: -60px;
         }
     }
@@ -100,9 +104,9 @@
         position: relative;
         &-copy {
             color: #af8a82;
-            line-height: 2.69;
+            line-height: @baseLineHeightUnit * 2.69;
             letter-spacing: 0.26px;
-            font-size: 13px;
+            font-size: @baseFontSizeUnit * 1.3;
             text-align: center;
         }
     }
@@ -112,8 +116,8 @@
         right: 150px;
         &-text {
             color: #ffffff;
-            font-size: 16px;
-            font-family: "MuliBold";
+            font-size: @baseFontSizeUnit * 1.6;
+            font-family: @muliBold;
             position: relative;
         }
     }
