--- a/less/blocks/_instagram.less
+++ b/less/blocks/_instagram.less
@@ -6,11 +6,11 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        font-family: "MuliExtraBold";
+        font-family: @muliExtraBold;
         color: #0aa566;
         text-decoration: none;
-        line-height: 1.67;
-        font-size: 24px;
+        line-height: @baseLineHeightUnit * 1.67;
+        font-size: @baseFontSizeUnit * 2.4;
         margin-bottom: 45px;
     }
     &_logo {
