--- a/less/_media.less
+++ b/less/_media.less
@@ -207,7 +207,7 @@
 
 /* Footer=================================*/
 .footer__content {
-    padding: 70px 30px;
+    padding: 70px 50px;
     flex-direction: column;
 }
 .footer__logo {
@@ -216,7 +216,7 @@
 }
 .footer__centre-blog {
     justify-content: space-between;
-    margin: 40px 70px 60px;
+    margin: 40px 0 60px;
 }
 .footer__information {
     margin: 0;
@@ -228,9 +228,9 @@
     margin-right: 0;
 }
 .footer__subscribe {
-    // margin: 0 70px;
-    margin-right: calc(15px + (70 - 15) * ((100vw - 360px) / (768 - 360)));
-    margin-left: calc(15px + (70 - 15) * ((100vw - 360px) / (768 - 360)));
+    // margin-right: calc(15px + (70 - 15) * ((100vw - 360px) / (768 - 360)));
+    // margin-left: calc(15px + (70 - 15) * ((100vw - 360px) / (768 - 360)));
+    width: 100%;
 }
 
 @media (max-width: 480px) {
