--- a/less/blocks/_story.less
+++ b/less/blocks/_story.less
@@ -7,16 +7,8 @@
     padding: 120px 0 160px 0;
     &__about {
         margin-right: 206px;
-        position: relative;
-        &::after {
-            content: "";
-            width: 290px;
-            height: 216px;
-            background-image:url("./../../assets/images/story/story-stamp-img.png");
-            position: absolute;
-            top: 25px;
-            right: -330px;
-        }
+        
+        
     }
     &__title {
         margin-top: 140px;
@@ -35,4 +27,18 @@
         font-size: @baseFontSizeUnit * 2.1;
         line-height: @baseLineHeightUnit;
     }
+    &__img-box {
+        display: block;
+        position: relative;
+        &::after {
+            content: "";
+            width: 290px;
+            height: 216px;
+            background-image:url("./../../assets/images/story/story-stamp-img.png") ;
+            position: absolute;
+            top: 25px;
+            right:425px; 
+            z-index: 99999;
+        }
+}
 }
