--- a/less/main.less
+++ b/less/main.less
@@ -34,6 +34,7 @@ ul {
 @import "./blocks/_article.less";
 @import "./blocks/_instagram.less";
 @import "./blocks/_footer.less";
+@import "./blocks/_logo.less";
 
 
 
