--- a/less/_media.less
+++ b/less/_media.less
@@ -1,6 +1,6 @@
 // main: ./main.less
 
-@media (max-width: 768px) {
+@media (min-width: 480px) and (max-width: 768px) {
 
     /* Header=============================*/
     /* запрос для бургер меню*/
@@ -139,7 +139,7 @@
     align-items: center;
     padding: 70px 30px;
 }
-.story__about::after {
+.story__img-box::after {
     display: none;
 }
 .story__about {
